# python-packages

./: LICENSE  README.md
quaternions_algebra/: README.md  pyproject.toml
quaternions_algebra/tests/: quaternion.py
