[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quaternions_algebra"
version = "1.0.0beta"
dependencies = []
requires-python = ">= 3.8"
authors = []
maintainers = []
description = "A python package for quaternions"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["quaternions", "algebra", "graphics"]
classifiers = [
 "Development Status :: 1 - Planning",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python :: 3 :: Only",
]

[project.url]
Repository = "https://github.com/mendlero/python-packages.git"
Issues = "https://github.com/mendlero/python-packages/issues"
Changelog = "https://github.com/mendlero/python-packages/blob/main/quaternions_algebra/CHANGELOG.md"
